fix: change overflow property

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
   height: 100%;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: auto;
 }
